--- a/src/main/resources/templates/team/team_list.html
+++ b/src/main/resources/templates/team/team_list.html
@@ -30,21 +30,27 @@
 <p></p>
 <hr>
 <h2>Team Form:</h2>
-<form action="#" th:action="@{/team/add}" th:object="${team}" method="post">
+<form action="#" th:action="${action}" th:object="${team}" method="post">
+    <input type="hidden" th:field="*{id}"/>
+    <input type="hidden" th:field="*{pin}"/>
     <table width="25%" style="font-size: 18px">
         <tr>
             <td>Name:(*)</td>
             <td><input type="text" th:field="*{name}"/></td>
-            <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: orangered">Name Error</td>
+            <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                style="color: orangered; font-size: 14px">Name Error
+            </td>
         </tr>
         <tr>
             <td>N# of members:(*)</td>
             <td><input type="number" th:field="*{numOfMembers}"/></td>
-            <td th:if="${#fields.hasErrors('numOfMembers')}" th:errors="*{numOfMembers}" style="color: orangered">N# of members Error</td>
+            <td th:if="${#fields.hasErrors('numOfMembers')}" th:errors="*{numOfMembers}"
+                style="color: orangered; font-size: 14px">N# of members Error
+            </td>
         </tr>
         <tr>
             <td></td>
-            <td><input type="submit" value="Submit"/><input type="reset" value="Reset"/></td>
+            <td><input type="submit" th:value="${action=='/team/add'?'Create':'Update'}"/><input type="reset" value="Reset"/></td>
         </tr>
     </table>
 </form>
