CypherController refactored , method saveHint implemented, CypherNotFoundException created

--- a/src/main/resources/templates/hint/detail.html
+++ b/src/main/resources/templates/hint/detail.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>Hint - detail:</h2>
-<form action="#" th:action="@{/cypher/hint/save}" th:object="${hint}" method="post">
+<form action="#" th:action="@{/hint/save}" th:object="${hint}" method="post">
     <table width="50%" style="font-size: 18px">
         <tr>
             <td>Cypher Id</td>
