--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -24,13 +24,13 @@
     </thead>
     <tbody>
     <tr th:each="cypher : ${cyphers}">
-        <td th:text="${cypher.cypherId}">cypherId</td>
+        <td th:text="${cypher.cypherId}" align="center">cypherId</td>
         <td th:text="${cypher.name}">Jmeno</td>
-        <td th:text="${cypher.stage}">Cislo</td>
+        <td th:text="${cypher.stage}" align="center">Cislo</td>
         <td th:text="${cypher.location}">X, Y</td>
         <td th:text="${cypher.codeword}">codove slovo</td>
         <td align="center">
-            <a href="#" th:href="@{'/hint/list/'+${cypher.cypherId}}">Hinty</a> |
+            <a href="#" th:href="@{'/hint/list?cypherId='+${cypher.cypherId}}">Detail</a> |
             <a href="#" th:href="@{'/cypher/update/'+${cypher.cypherId}}">Upravit</a> |
             <a href="#" th:href="@{'/cypher/delete/'+${cypher.cypherId}}">Smazat</a>
         </td>
