Fix two tests, new app.properties for test, changed params of constructor ResourceNotFoundExceptions class, renamed some params in Cypher and Hint controller

--- a/src/main/resources/templates/cypher/form.html
+++ b/src/main/resources/templates/cypher/form.html
@@ -6,7 +6,7 @@
     <title>CypherDetail</title>
 </head>
 <body>
-<h2><span th:text="${nadpis}">Nadpis</span><h2>
+<h2><span th:text="${heading}">Nadpis</span><h2>
 <form action="#" th:action="@{/cypher/save}" th:object="${cypher}" method="post">
         <table width="50%" style="font-size: 18px">
             <tr>
