--- a/src/main/resources/templates/hint/detail.html
+++ b/src/main/resources/templates/hint/detail.html
@@ -6,7 +6,7 @@
     <title>HintDetail</title>
 </head>
 <body>
-<h2><span th:text="${nadpis}">Nadpis</span><h2>
+<h2><span th:text="${heading}">Nadpis</span><h2>
 <form action="#" th:action="@{/hint/save}" th:object="${hint}" method="post">
     <table width="50%" style="font-size: 18px">
         <tr>
