--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -5,52 +5,57 @@
     <title>Team List</title>
 </head>
 <body>
-<h2>Teams List:</h2>
-<table border="1" width="30%" style="font-size: 18px; border: thin solid; border-collapse: collapse">
-    <thead style="font-weight: bold; font-size: 20px">
-    <td>Id</td>
-    <td>Name</td>
-    <td>N# of members</td>
-    <td>PIN</td>
-    <td align="center">Actions</td>
+<h2>Týmy:</h2>
+<table border="1" width="50%" >
+    <thead>
+    <td align="center">Id</td>
+    <td align="center">Jméno týmu</td>
+    <td align="center">Počet členů</td>
+    <td align="center">PIN</td>
+    <td align="center">Akce</td>
+    <tr th:if="${teams.empty}">
+        <td colspan="5"><h3> V systému nejsou týmy</h3></td>
+    </tr>
     </thead>
     <th:block th:each="team : ${teams}">
         <tr>
-            <td th:text="${team.teamId}">12</td>
+            <td th:text="${team.teamId}" align="center">8888</td>
             <td th:text="${team.name}">Bamboo</td>
             <td th:text="${team.numOfMembers}" align="center">8</td>
-            <td th:text="${team.pin}">abcd</td>
+            <td th:text="${team.pin}" align="center">9876</td>
             <td align="center">
-                <a href="#" th:href="@{'/team/update/'+${team.teamId}}">Update</a> |
-                <a href="#" th:href="@{'/team/delete/'+${team.teamId}}">Remove</a>
+                <a href="#" th:href="@{'/team/update/'+${team.teamId}}">Upravit</a> |
+                <a href="#" th:href="@{'/team/delete/'+${team.teamId}}">Smazat</a>
             </td>
         </tr>
     </th:block>
 </table>
 <p></p>
 <hr>
-<h2>Team Form:</h2>
+<h2>Tým:</h2>
 <form action="#" th:action="${action}" th:object="${team}" method="post">
     <input type="hidden" th:field="*{teamId}"/>
     <input type="hidden" th:field="*{pin}"/>
-    <table width="25%" style="font-size: 18px">
+    <table width="50%" style="font-size: 18px">
         <tr>
-            <td>Name:(*)</td>
+            <td>Jméno: (*)</td>
             <td><input type="text" th:field="*{name}"/></td>
             <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-                style="color: orangered; font-size: 14px">Name Error
+                style="color: orangered; font-size: 14px">Chyba - Jméno
             </td>
         </tr>
         <tr>
-            <td>N# of members:(*)</td>
+            <td>Počet členů:(*)</td>
             <td><input type="number" th:field="*{numOfMembers}"/></td>
             <td th:if="${#fields.hasErrors('numOfMembers')}" th:errors="*{numOfMembers}"
-                style="color: orangered; font-size: 14px">N# of members Error
+                style="color: orangered; font-size: 14px">Chyba - Počet členů
             </td>
         </tr>
         <tr>
             <td></td>
-            <td><input type="submit" th:value="${action=='/team/add'?'Create':'Update'}"/><input type="reset" value="Reset"/></td>
+            <td><input type="submit" th:value="${action=='/team/add'?'Nový':'Uložit'}"/>
+                <input type="reset" value="Vynulovat"/>
+            </td>
         </tr>
     </table>
 </form>
