--- a/src/main/resources/templates/finalplace/form.html
+++ b/src/main/resources/templates/finalplace/form.html
@@ -6,7 +6,7 @@
     <title>FinalPlace</title>
 </head>
 <body>
-<h2>"Poslední" místo<h2>
+<h2>Místo ukončení<h2>
 <form action="#" th:action="@{/finalplace/save}" th:object="${finalplace}" method="post">
         <table width="50%" style="font-size: 18px">
             <tr>
