Upraveny titles u progress html stranek do cestiny

--- a/src/main/resources/templates/progress/pass.html
+++ b/src/main/resources/templates/progress/pass.html
@@ -2,7 +2,7 @@
 <html lang="cz">
 <head>
     <meta charset="UTF-8">
-    <title>Stage ID passed</title>
+    <title>Stanoviště ID splněno</title>
 </head>
 <body>
 <h2>Stanoviště ID splněno</h2>
