--- a/src/main/resources/templates/progress/skip.html
+++ b/src/main/resources/templates/progress/skip.html
@@ -2,7 +2,7 @@
 <html lang="cz">
 <head>
     <meta charset="UTF-8">
-    <title>Stage ID skipped</title>
+    <title>Stanoviště ID přeskočeno</title>
 </head>
 <body>
 <h2>Stanoviště ID přeskočeno</h2>
