--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -2,10 +2,10 @@
 <html lang="cz" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Stage {id}-TBD Progress</title>
+    <title>Stanoviště ID - Postup</title>
 </head>
 <body>
-<h1>Stanoviště číslo {id}-TBD - Postup</h1>
+<h1>Stanoviště číslo ID - Postup</h1>
 <h2>Týmy:</h2>
 <table border="1" width="50%" >
     <thead>
