--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -53,7 +53,7 @@
         </tr>
         <tr>
             <td></td>
-            <td><input type="submit" th:value="${action=='/team/add'?'Nový':'Uložit'}"/>
+            <td><input type="submit" th:value="${action=='/team/main'?'Nový':'Uložit'}"/>
                 <input type="reset" value="Vynulovat"/>
             </td>
         </tr>
