--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -32,7 +32,8 @@
         <td align="center">
             <a href="#" th:href="@{'/hint/list?cypherId='+${cypher.cypherId}}">Detail</a> |
             <a href="#" th:href="@{'/cypher/update/'+${cypher.cypherId}}">Upravit</a> |
-            <a href="#" th:href="@{'/cypher/delete/'+${cypher.cypherId}}">Smazat</a>
+            <a href="#" th:href="@{'/cypher/delete/'+${cypher.cypherId}}">Smazat</a> |
+            <a href="#" th:href="@{'/progress?cypherId='+${cypher.cypherId}}">Stav</a>
         </td>
     </tr>
 
