--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -5,7 +5,7 @@
     <title>Šifra - Stav</title>
 </head>
 <body>
-<h1>Šifra číslo <span th:text="${cypher.name}">cypherName</span> - Stav</h1>
+<h1>Šifra <span th:text="${cypher.name}"></span> - Stav</h1>
 <h2>Týmy:</h2>
 <table border="1" width="50%" >
     <thead>
