--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -32,8 +32,7 @@
         <td align="center">
             <a href="#" th:href="@{'/hint/list?cypherId='+${cypher.cypherId}}">Detail</a> |
             <a href="#" th:href="@{'/cypher/update/'+${cypher.cypherId}}">Upravit</a> |
-            <a href="#" th:href="@{'/cypher/delete/'+${cypher.cypherId}}">Smazat</a> |
-            <a href="#" th:href="@{/progress/(cypherId=${cypher.cypherId})}">Stav</a>
+            <a href="#" th:href="@{'/cypher/delete/'+${cypher.cypherId}}">Smazat</a>
         </td>
     </tr>
 
