Hint requesty v html souboru upraveny na lepsi format

--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -46,13 +46,13 @@
         <td th:text="${hint.text}">text</td>
         <td th:text="${hint.value}">value</td>
         <td align="center">
-            <a href="#" th:href="@{'/hint/update/'+${hint.hintId}}">Upravit</a> |
-            <a href="#" th:href="@{'/hint/delete/'+${hint.hintId}}">Smazat</a>
+            <a href="#" th:href="@{/hint/update/(hintId=${hint.hintId})}">Upravit</a> |
+            <a href="#" th:href="@{/hint/delete/(hintId=${hint.hintId})}">Smazat</a>
         </td>
     </tr>
     <tr>
         <td colspan="4" align="center">
-            <a href="#" th:href="@{'/hint/new?cypherId='+${cypher.cypherId}}">Přidat</a>
+            <a href="#" th:href="@{/hint/new(cypherId=${cypher.cypherId})}">Přidat</a>
         </td>
 
     </tr>
