--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -30,15 +30,15 @@
         <td th:text="${cypher.location}">X, Y</td>
         <td th:text="${cypher.codeword}">codove slovo</td>
         <td align="center">
-            <a href="#" th:href="@{'/hint/list?cypherId='+${cypher.cypherId}}">Detail</a> |
-            <a href="#" th:href="@{'/cypher/update/'+${cypher.cypherId}}">Upravit</a> |
-            <a href="#" th:href="@{'/cypher/delete/'+${cypher.cypherId}}">Smazat</a>
+            <a href="#" th:href="@{/hint/list(cypherId=${cypher.cypherId})}">Detail</a> |
+            <a href="#" th:href="@{/cypher/update(cypherId=${cypher.cypherId})}">Upravit</a> |
+            <a href="#" th:href="@{/cypher/delete(cypherId=${cypher.cypherId})}">Smazat</a>
         </td>
     </tr>
 
     <tr>
         <td colspan="6" align="center">
-            <a href="#" th:href="@{'/cypher/new/'}">Přidat</a>
+            <a href="#" th:href="@{/cypher/new}">Přidat</a>
         </td>
 
     </tr>
