--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -31,8 +31,8 @@
         <td th:text="${cypher.codeword}">codove slovo</td>
         <td align="center">
             <a href="#" th:href="@{/hint/list(cypherId=${cypher.cypherId})}">Detail</a> |
-            <a href="#" th:href="@{/cypher/update(cypherId=${cypher.cypherId})}">Upravit</a> |
-            <a href="#" th:href="@{/cypher/delete(cypherId=${cypher.cypherId})}">Smazat</a>
+            <a href="#" th:href="@{/cypher/update/{cypherId}(cypherId=${cypher.cypherId})}">Upravit</a> |
+            <a href="#" th:href="@{/cypher/delete/{cypherId}(cypherId=${cypher.cypherId})}">Smazat</a>
         </td>
     </tr>
 
