--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -46,8 +46,8 @@
         <td th:text="${hint.text}">text</td>
         <td th:text="${hint.value}">value</td>
         <td align="center">
-            <a href="#" th:href="@{/hint/update(hintId=${hint.hintId})}">Upravit</a> |
-            <a href="#" th:href="@{/hint/delete(hintId=${hint.hintId})}">Smazat</a>
+            <a href="#" th:href="@{/hint/update/{hintId}(hintId=${hint.hintId})}">Upravit</a> |
+            <a href="#" th:href="@{/hint/delete/{hintId}(hintId=${hint.hintId})}">Smazat</a>
         </td>
     </tr>
     <tr>
