--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -26,9 +26,9 @@
             <td th:text="${team.numOfMembers}" align="center">8</td>
             <td th:text="${team.pin}" align="center">9876</td>
             <td align="center">
-                <a href="#" th:href="@{'/progress/skip/'+${cypher.cypherId}+'?teamId='+${team.teamId}}">Přeskočit</a> |
-                <a href="#" th:href="@{'/progress/pass/'+${cypher.cypherId}+'?teamId='+${team.teamId}}">Splnit</a> |
-                <a href="#" th:href="@{'/progress/pending/'+${cypher.cypherId}+'?teamId='+${team.teamId}}">Pending</a>
+                <a href="#" th:href="@{/progress/skip/{cypherId}(cypherId=${cypher.cypherId}, teamId=${team.teamId})}">Přeskočit</a> |
+                <a href="#" th:href="@{/progress/pass/{cypherId}(cypherId=${cypher.cypherId}, teamId=${team.teamId})}">Splnit</a> |
+                <a href="#" th:href="@{/progress/pending/{cypherId}(cypherId=${cypher.cypherId}, teamId=${team.teamId})}">Pending</a>
             </td>
             <td th:text="${status}" align="center">PASSED></td>
         </tr>
