--- a/src/main/resources/templates/clientSide/clientSideList.html
+++ b/src/main/resources/templates/clientSide/clientSideList.html
@@ -3,11 +3,12 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
 
-    <title>Sifry</title>
+    <title>Šifry</title>
 
 </head>
 <body>
@@ -28,11 +29,11 @@
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item collapsedActive">
-                    <a class=" nav-link" href="#">Sifry <span class="sr-only">(current)</span></a>
+                    <a class=" nav-link" href="#">Šifry <span class="sr-only">(current)</span></a>
                 </li>
                 <div class="dropdown-divider-cst"></div>
                 <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Karticka</a>
+                    <a class=" nav-link" href="#">Kartička</a>
                 </li>
                 <div class="dropdown-divider-cst"></div>
                 <li class="nav-item collapsedNotActive">
@@ -40,7 +41,7 @@
                 </li>
                 <div class="dropdown-divider-cst"></div>
                 <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Odhlasit se</a>
+                    <a class=" nav-link" href="#">Odhlásit se</a>
                 </li>
                 <div class="dropdown-divider-cst"></div>
             </ul>
@@ -54,17 +55,17 @@
                 <div th:text="|${cypher.stage}. ${cypher.name}|" class="col"></div>
                 <div th:unless="${#lists.isEmpty(cypher.hints)}" class="col hintColumn">
                     <a href="#">
-                        <img  src="/img/hintIcon.png" width="20px" height="20px"/>
+                        <i class="far fa-lightbulb"></i>
                     </a>
                 </div>
                 <div th:if="${status.name() == 'SKIPPED'}" class="col statusColumn">
-                    <img src="/img/inProgress.png" width="20px" height="20px">
+                    <i class="far fa-times-circle"></i>
                 </div>
                 <div th:if="${status.name() == 'SOLVED'}" class="col statusColumn">
-                    <img src="/img/done.png" width="20px" height="20px">
+                    <i class="far fa-check-circle"></i>
                 </div>
                 <div th:if="${status.name() == 'PENDING'}" class="col statusColumn">
-                    <img src="/img/inProgress.png" width="20px" height="20px">
+                    <i class="far fa-spinner"></i>
                 </div>
             </div>
         <hr/>
