--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,6 +7,19 @@ a:hover {
     text-decoration: none;
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+h2{
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+}
+
+p{
+    text-align: justify;
+}
+
 .stageCol{
     width: 10px;
 }
@@ -95,8 +108,9 @@ a:hover {
 
 .btn:hover{
     background-color: white;
-    color: rgb(237, 24, 72);
-    border-color: white;
+    -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
 }
 
 .btn:focus{
@@ -194,10 +208,6 @@ a:hover {
     text-align: right;
 }
 
-.statusColumn{
-    text-align: right;
-}
-
 .fa-check-circle{
     color: lawngreen;
 }
@@ -244,4 +254,9 @@ a:hover{
     background-color: #e9ecef;
     color: black;
     text-decoration: none;
+}
+
+.paddingRow{
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
